Added authorization header for swagger
